--- a/user_interface/src/components/Popup.css
+++ b/user_interface/src/components/Popup.css
@@ -65,6 +65,7 @@
   font-size: 1rem;
   text-align: center;
   line-height: 1.5;
+  overflow-wrap: anywhere;
 }
 
 .popup-close {
